k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: file-service
  labels:
    name: file-service
